En este punto ya se muestran los cambios en ambos jugadores. Queda pendiente agregar las validaciones del modelo. Están pero NO funcionales.